--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "url": "git@github.com:astrotrain55/to-webp-json.git"
   },
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "tsx src/index.ts",
     "start": "node ./dist/index.js",
     "build": "rimraf ./dist && tsc && tsc-alias",
     "public:lib": "npm run build && npm publish",
-    "format": "prettier --ignore-path .gitignore --write \"**/*.+(ts|tsx)\""
+    "format": "prettier . --write"
   },
   "keywords": [
     "typescript",
@@ -29,15 +29,15 @@
     "@inquirer/prompts": "^6.0.1",
     "directory-structure-json": "^1.0.0",
     "is-image": "^4.0.0",
-    "sharp": "^0.33.4"
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
-    "@types/node": "^20.12.13",
-    "prettier": "^3.2.5",
-    "rimraf": "^5.0.7",
+    "@types/node": "^22.6.1",
+    "prettier": "3.3.3",
+    "rimraf": "^6.0.1",
     "tsc-alias": "^1.8.10",
-    "tsx": "^4.11.0",
-    "typescript": "^5.4.5"
+    "tsx": "^4.19.1",
+    "typescript": "^5.6.2"
   },
   "types": "./types/index.d.ts",
   "files": [
