--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "sharp": "^0.33.5"
   },
   "devDependencies": {
+    "@types/directory-structure-json": "^1.0.0",
     "@types/node": "^22.6.1",
     "prettier": "3.3.3",
     "rimraf": "^6.0.1",
