--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./dist/index.js",
   "type": "module",
   "bin": "./dist/index.js",
+  "homepage": "https://vdistortion.github.io/to-webp-json/",
   "repository": {
     "type": "git",
     "url": "git@github.com:astrotrain55/to-webp-json.git"
@@ -14,7 +15,12 @@
     "start": "node ./dist/index.js",
     "build": "rimraf ./dist && tsc && tsc-alias",
     "public:lib": "npm run build && npm publish",
-    "format": "prettier . --write"
+    "public:gh-pages": "gh-pages -d docs/.vitepress/dist -t --nojekyll",
+    "public": "npm run docs:build && npm run public:gh-pages",
+    "format": "prettier . --write",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "keywords": [
     "typescript",
@@ -34,11 +40,13 @@
   "devDependencies": {
     "@types/directory-structure-json": "^1.0.2",
     "@types/node": "^22.6.1",
+    "gh-pages": "^6.2.0",
     "prettier": "3.3.3",
     "rimraf": "^6.0.1",
     "tsc-alias": "^1.8.10",
     "tsx": "^4.19.1",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "vitepress": "^1.5.0"
   },
   "types": "./types/index.d.ts",
   "files": [
