--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "to-webp-json",
   "version": "0.3.3",
-  "description": "Convert images to webp structure",
+  "description": "Image conversion for static websites",
   "main": "./dist/index.js",
   "type": "module",
   "bin": "./dist/index.js",
