--- a/package.json
+++ b/package.json
@@ -33,11 +33,14 @@
   "license": "GPL",
   "dependencies": {
     "@inquirer/prompts": "^7.5.3",
+    "cli-progress": "^3.12.0",
     "directory-structure-json": "^1.0.0",
     "is-image": "^4.0.0",
+    "p-limit": "^7.1.1",
     "sharp": "^0.34.2"
   },
   "devDependencies": {
+    "@types/cli-progress": "^3.11.6",
     "@types/directory-structure-json": "^1.0.2",
     "@types/node": "^22.15.23",
     "gh-pages": "^6.3.0",
